Refactored gamestart